Validate type of class before initialization
Provides a mild degree of extra safety